--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <div id="projects">
         <div class="row align-items-center row-about">
-          <div class="col-md-8 col-8 offset-2 offset-md-2">
+          <div class="col-md-8 col-12 offset-md-2 col-sm-10 offset-sm-1">
             <h1><span>Life</span> pics</h1>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
