--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <br>
             <br>
             <br>
-            <h6>Also contact me here if you have an idea and want to build something togheter</h6>
+            <h6>Also contact me here if you have an idea and want to build something together</h6>
             <a id="mail" href="mailto:elia.pasqualini.97@gmail.com"><span>elia.pasqualini.97@gmail.com</span></a>
           </div>
         </div>
