--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
             <p align="justify">I was born and raised in San Marino, the oldest Republic in the world, on June 2nd, 1997.<br>
               My interest towards Computer Technology brought me to enroll in the ITIS “Leonardo da Vinci” High School in Rimini, Italy, where I graduated in 2016 (98/100).<br>
               For my further education I chose to study Computer Science and Engineering at the Alma Mater University of Bologna, Campus of Cesena.<br>
-              I got the bachelor degree in 2019 (98/110), and I’m now attending the master’s program, which I count on finishing in 2021.<br>
-            Aside from my life in Computer Technology, I’m a Futsal player for San Marino National Team. At the moment I’m playing for FC Fiorentino.</p>
+              I got the bachelor degree in 2019 (98/110), and the master’s program in 2022 (102/110).<br>
+              From the day after my second degree, I started working for Marlu as a developer and data analyst.<br>
+            Aside from my life in Computer Technology, I’m a Futsal player for San Marino National Team. At the moment I’m playing for FC Folgore.</p>
           </div>
         </div>
 
